tests/k8s: Enable tests for qemu-runtime-rs-coco-dev
Add the runtime class to the non-tee tests and
enable it to run in the test code

Signed-off-by: stevenhorsman <steven@uk.ibm.com>

--- a/.github/workflows/run-kata-coco-tests.yaml
+++ b/.github/workflows/run-kata-coco-tests.yaml
@@ -218,6 +218,7 @@ jobs:
       matrix:
         vmm:
           - qemu-coco-dev
+          - qemu-runtime-rs-coco-dev
         snapshotter:
           - nydus
         pull-type:
